--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,12 @@
-/*@media only screen and (min-width: 601px){
-.all {
-    width: 85%;
+.all{
+    width: 100%;
     margin: 0 auto;
-}}
-@media (min-width: 1440px) { 
-  .all {
-    width: 75%;
-    margin: 0 auto;
-    }
-}*/
-
+    background-color: #fff;
+}
 nav {
     box-shadow: none;
-}
-.nav-wrapper {
+    padding-left: 5em;
+    padding-right: 5em;
     background-color: #fff;
 }
 #logo {
@@ -30,13 +23,19 @@ nav ul {
 .menu-left {
     padding-left: 140px!important;
 }
+.button-collapse{
+   right: 50px;
+}
+i.icon-menu {
+    color: #ff1933;
+    float: left;
+}
 h3 {
     font-size: 30px;
     font-weight: bold;
 }
 .boxText {
     padding: 30px;
-    width: 44%;
 }
 .boxText p {
     font-weight: 400;
@@ -44,6 +43,7 @@ h3 {
 }
 #modalidades {
     background-color: #dadada;
+    padding-top: 1em;
 }
 .box-caption {
     font-size: 1.4rem;
@@ -51,3 +51,24 @@ h3 {
     margin-top: 5px;
     margin-bottom: 0;
 }
+#perguntas{
+    background-color: #f1f1f1;
+    padding-top: 1em;
+}
+.questao p {
+text-align: left;
+color: #3c3c3c;
+}
+footer{
+    background-color: #3c3c3c;
+    color: #fff;
+}
+.itemCategoria {
+    background-color: #fff;
+    padding: 2em;
+    margin-bottom: 6em;
+}
+.itemCategoria h4{
+    font-weight: bold;
+}
+
